# sportsipy

./: pyproject.toml  requirements-test.txt
sportsipy/fb/: roster.py  schedule.py  team.py
sportsipy/mlb/: boxscore.py  player.py  roster.py  schedule.py  teams.py
sportsipy/nba/: boxscore.py  constants.py  nba_utils.py  player.py  roster.py  schedule.py  teams.py
sportsipy/ncaab/: boxscore.py  conferences.py  player.py  rankings.py  roster.py  schedule.py  teams.py
sportsipy/ncaaf/: boxscore.py  conferences.py  player.py  rankings.py  roster.py  schedule.py  teams.py
sportsipy/nfl/: boxscore.py  player.py  roster.py  schedule.py  teams.py
sportsipy/nhl/: boxscore.py  player.py  roster.py  schedule.py  teams.py
tests/integration/teams/: test_nba_integration.py
