[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "sportsipy"
authors = [
    {name = "Robert Clark", email = "robdclark@outlook.com"},
]
maintainers = [
    {name = "David Krause"},
]
description = "A free sports API written for python"
keywords=['stats', 'sports', 'api', 'sportsipy', 'machine learning']
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "pandas>=2.2.3",
    "pyquery>=2.0.1",
    "requests>=2.32.3",
]

[project.urls]
Source = "https://github.com/davidjkrause/sportsipy"
Tracker = "https://github.com/davidjkrause/sportsipy"


[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.rst"}

[dependency-groups]
dev = [
    "flexmock>=0.12.2",
    "mock>=5.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
]
